master/Ciscolive-examples/ciscolivefunweb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciscolivefunweb
  labels:
    app: ciscolivefun
spec:
  selector:
    matchLabels:
      app: ciscolivefun
      tier: web
  replicas: 3
  template:
    metadata:
      labels:
        app: ciscolivefun
        tier: web
    spec:
      containers:
      - name: ciscolivefun-app
        image: axmohammed/azhar-private:ciscolive-fun
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
