master/Ciscolive-examples/ciscolivewelcomeweb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciscolivewelcomeweb
  labels:
    app: ciscolivewelcome
spec:
  selector:
    matchLabels:
      app: ciscolivewelcome
      tier: web
  replicas: 3
  template:
    metadata:
      labels:
        app: ciscolivewelcome
        tier: web
    spec:
      containers:
      - name: ciscolivewelcome-app
        image: axmohammed/azhar-private:ciscolive-welcome
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
