master/Ciscolive-examples/ciscolivefun.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ciscolivefunweb
  labels:
    app: ciscolivefun
spec:
  selector:
    matchLabels:
      app: ciscolivefun
      tier: web
  replicas: 3
  template:
    metadata:
      labels:
        app: ciscolivefun
        tier: web
    spec:
      containers:
      - name: ciscolivefun-app
        image: axmohammed/azhar-private:ciscolive-fun
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: ciscolivefunweb
  labels:
    app: ciscolivefun
spec:
  selector:
    app: ciscolivefun
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
