master/Ciscolive-examples/ciscolivefunweb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ciscolivefunweb
  labels:
    app: ciscolivefun
spec:
  selector:
    app: ciscolivefun
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
