master/Ciscolive-examples/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: web-ingress
spec:
tls:
  - hosts:
    - web
    secretName: ciscolive-secret
 rules:
   - host: web
     http:
       paths:
         - path: /welcome/
           backend:
             serviceName: ciscolivewelcomeweb
             servicePort: 80
         - path: /thanks/
           backend:
             serviceName: ciscolivethanksweb
             servicePort: 80
